[gd_scene load_steps=9 format=2]

[ext_resource path="res://assets/initial/boss_body.png" type="Texture" id=1]
[ext_resource path="res://assets/initial/gear.png" type="Texture" id=2]
[ext_resource path="res://game/boss.gd" type="Script" id=3]
[ext_resource path="res://assets/audio/sfx/boss_move.wav" type="AudioStream" id=4]
[ext_resource path="res://assets/audio/sfx/boss_dash.wav" type="AudioStream" id=5]
[ext_resource path="res://assets/audio/sfx/boss_die.wav" type="AudioStream" id=7]
[ext_resource path="res://assets/audio/sfx/boss_toss2.wav" type="AudioStream" id=8]

[sub_resource type="CircleShape2D" id=2]
radius = 95.021

[node name="boss" type="Node2D"]
position = Vector2( 1920, 1080 )
script = ExtResource( 3 )

[node name="ship" type="Area2D" parent="."]
gravity = 0.0

[node name="boss_body" type="Sprite" parent="ship"]
rotation = -3.14159
texture = ExtResource( 1 )

[node name="gear1" type="Sprite" parent="ship"]
position = Vector2( -8, 39 )
texture = ExtResource( 2 )

[node name="gear2" type="Sprite" parent="ship"]
position = Vector2( -25, 33 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="gear3" type="Sprite" parent="ship"]
position = Vector2( -8, -39 )
texture = ExtResource( 2 )

[node name="gear4" type="Sprite" parent="ship"]
position = Vector2( -24, -33 )
scale = Vector2( 0.3, 0.3 )
texture = ExtResource( 2 )

[node name="collider" type="CollisionShape2D" parent="ship"]
position = Vector2( -2.00012, 0 )
shape = SubResource( 2 )

[node name="sfx_intro" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="sfx_position" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="sfx_standby" type="AudioStreamPlayer" parent="."]

[node name="sfx_toss" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="sfx_die" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="sfx_dash" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )
[connection signal="body_entered" from="ship" to="." method="_on_ship_body_entered"]
